fix: :sparkles: Changing the styles on html

--- a/DIA2/html/index.html
+++ b/DIA2/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HV</title>
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/x-icon" href="https://w7.pngwing.com/pngs/231/958/png-transparent-linkedin-resume-computer-icons-curriculum-vitae-the-law-office-of-roger-m-nichols-others-text-rectangle-resume.png">
 </head>
 <body>
@@ -12,11 +13,11 @@
         <!--COLUMNA 1-->
         <div class="c1">
         <!--Circulo foto perfil-->
-        <div>
-            <img src="../Dia2/imgs/fotoPerfil.png" id="fotoPerfil">
+        <div id="fotoPerfil">
+            <img src="../img/fotoPerfil.png" width="150px" height="150px">
         </div>
         <!--Información Personal-->
-        <div style="display:block; ">
+        <div id="infoPersonal">
             <h3>Información Personal</h3>
             <p>Soy un estudiante motivado y responsable, con un fuerte
                 interés en la tecnología. Poseo habilidades en
@@ -33,20 +34,19 @@
             <h4>Email: </h4><p>santaguilar17@gmail.com</p>
             <a href="https://github.com/Santiagoaghhh">GitHub</a>
             <a href="https://www.linkedin.com/in/santiago-av-208b38348/">LinkedIn</a>
-            <link rel="stylesheet" href="styles.css">
         </div>
 
         <!--Certificados-->
-        <div>
-            <img src="../Dia2/imgs/TCOCF.png">
-            <img src="../Dia2/imgs/DDDSI.png">
+        <div id="certificados">
+            <img src="../img/TCOCF.png" class="cert">
+            <img src="../img/DDDSI.png" class="cert">
         </div>
         </div>
 
         <!--COLUMNA 2-->
         <div id="c2">
             <!--Información Académica-->
-        <div>
+        <div id="infoAcademica">
             <h3>2022-2024</h3>
             <h3>TECNICO EN CONTABILIZACION DE OPERACIONES
             COMERCIALES Y FINANCIERAS</h3>
