feat: :sparkles: Improving the page

--- a/DIA5/html/index.html
+++ b/DIA5/html/index.html
@@ -3,18 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazon</title>
+    <title>Amazon Prime</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/x-icon" href="../img/LogoPrimeE2.png">
 </head>
-<body>
-    <h1>ADSJ</h1>
-    <!--DIV del fondo, acá van todos los demás-->
-    <div id="background">
-        <div class="dpr">
-            <h1>Pruenas</h1>
-            <img src="../img/Group 1.png" alt="">
-            <o
+<body style="background-color: black;">
+    <!--Fondo de toda la página-->
+    <div id="fondo">
+        <!--BARRA SUPERIOR (LOGIN + SEARCH BUTTON)-->
+        <div id="topbar">
+            <!--Sugerencia: Hacer una tabla para el botón de búsqueda y login-->
+            <!--Search icon-->
+            <div id="search">
+                <img src="../img/Icon awesome-search.png" alt="searchbutton">
+            </div>
+    
+            <!--Login button-->
+            <div class="login">
+                <button class="login"> Login </button>
+            </div>
+        </div>
+        
+        <!--Logo-->
+        <div id="logo">    
+            <img src="../img/LogoPrimeE2.png"/>        
+        </div>
+
+        <!--Text pre sign-up-->
+        <div class="font-text" id="text1">
+            <h1>Your favorite content, on one place only</h1>
+            <p>Now you can enjoy everything from Amazon Prime Video and Twitch Prime with you Amazon Prime
+            suscription on one place that brings all the entertaiment you love.</p>
+        </div>
+
+        <!--Sign up button-->
+        <div class="signup">
+            <button class="signup">Sign-Up on Amazon </button>
+        </div>
+
+        <!--container1-->
+        <div class="container">
+            <h1 class="font-text">Live Content and the palm of your hand</h1>
+            <img src="../img/TV.png"/>
+            <p class="text2">With 4K HDR quality, you can enjoy all of the live content you like to see, from Sports 
+                events to E-sports events.
+            </p>
+        </div>
+
+        <!--container2-->
+            <div class="container2">
+                <h1>Don't like to watch live? No problem, we got you covered</h1>
+                <!--Imágenes-->
+                <div>
+                    <img src="../img/Rectangle 4-1.png" alt="Rectangle 4-1" class="container2">
+                    <img src="../img/Rectangle 4-2.png" alt="Rectangle 4-2" class="container2">
+                    <img src="../img/Rectangle 4-3.png" alt="Rectangle 4-3" class="container2">
+                    <img src="../img/Rectangle 4-4.png" alt="Rectangle 4-4" class="container2">
+                </div> 
+                <p class="text2">You'll find a variety of movies, not only for adults but also for 
+                    your family, with your internet. 24/    7. On demand. 
+                </p>
+            </div>
+
+
+        <!--container3-->
+        <div class="container">
+            <h1>Cancel anytime, anywhere </h1>
+            <img src="../img/Icon metro-cancel.png"/>
+            <p class="text2">If you don't like our services, you can cancel anytime you want, no contracts,
+                no fees.
+            </p>
+        </div>
+
+        <!--Compatible devices-->
+        <!--Nota: Subdividir-->
+        <div class="devices">
+            <h1 class="devices">Compatible devices</h1>
+            <p>There's a range of devices where you can enjoy all of the content available
+                in Prime Entertaiment:
+            </p>
+            <!--Imágenes-->
+            <div></div>
         </div>
     </div>
 </body>
