feat: :lipstick: Adding the font-face

--- a/DIA5/html/index.html
+++ b/DIA5/html/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/x-icon" href="../img/LogoPrimeE2.png">
 </head>
-<body style="background-color: black;">
+<body>
     <!--Fondo de toda la página-->
     <div id="fondo">
         <!--BARRA SUPERIOR (LOGIN + SEARCH BUTTON)-->
@@ -83,7 +83,20 @@
                 in Prime Entertaiment:
             </p>
             <!--Imágenes-->
-            <div></div>
+            <div class="devices">
+                <img src="../img/Flecha.png" alt="Flecha" class="row">
+                <img src="../img/Image 2.png" alt="iPhone" class="devices">
+                <img src="../img/Image 1.png" alt="Mac" id="mac">
+                <img src="../img/Image 3.png" alt="PC" class="devices">
+            </div>
+        </div>
+        <!--Politicas & etc-->
+        <div id="politicas">
+            <a href="" class="etc">Privacy Policy</a>
+            <a href="" class="etc">Terms of Use</a>
+            <a href="" class="etc">Sales and Refunds</a>
+            <a href="" class="etc">Legal</a>
+            <a href="" class="etc">Site Map</a>
         </div>
     </div>
 </body>
