feat: :zap: Improving css and organize the html

--- a/DIA5/html/index.html
+++ b/DIA5/html/index.html
@@ -20,7 +20,7 @@
     
             <!--Login button-->
             <div class="login">
-                <button class="login"> Login </button>
+                <button class="login">Login</button>
             </div>
         </div>
         
@@ -30,10 +30,10 @@
         </div>
 
         <!--Text pre sign-up-->
-        <div class="font-text" id="text1">
-            <h1>Your favorite content, on one place only</h1>
-            <p>Now you can enjoy everything from Amazon Prime Video and Twitch Prime with you Amazon Prime
-            suscription on one place that brings all the entertaiment you love.</p>
+        <div id="text1">
+            <h1 id="title1">Your favorite content, on one place only</h1>
+                <p class="p-cont">Now you can enjoy everything from Amazon Prime Video and Twitch Prime with you Amazon Prime
+                suscription on one place that brings all the entertaiment you love.</p>
         </div>
 
         <!--Sign up button-->
@@ -43,16 +43,16 @@
 
         <!--container1-->
         <div class="container">
-            <h1 class="font-text">Live Content and the palm of your hand</h1>
+            <h1 class="title-cont">Live Content and the palm of your hand</h1>
             <img src="../img/TV.png"/>
-            <p class="text2">With 4K HDR quality, you can enjoy all of the live content you like to see, from Sports 
+            <p class="p-cont">With 4K HDR quality, you can enjoy all of the live content you like to see, from Sports 
                 events to E-sports events.
             </p>
         </div>
 
         <!--container2-->
             <div class="container2">
-                <h1>Don't like to watch live? No problem, we got you covered</h1>
+                <h1 class="title-cont">Don't like to watch live? No problem, we got you covered</h1>
                 <!--Imágenes-->
                 <div>
                     <img src="../img/Rectangle 4-1.png" alt="Rectangle 4-1" class="container2">
@@ -60,7 +60,7 @@
                     <img src="../img/Rectangle 4-3.png" alt="Rectangle 4-3" class="container2">
                     <img src="../img/Rectangle 4-4.png" alt="Rectangle 4-4" class="container2">
                 </div> 
-                <p class="text2">You'll find a variety of movies, not only for adults but also for 
+                <p class="p-cont">You'll find a variety of movies, not only for adults but also for 
                     your family, with your internet. 24/    7. On demand. 
                 </p>
             </div>
@@ -68,9 +68,9 @@
 
         <!--container3-->
         <div class="container">
-            <h1>Cancel anytime, anywhere </h1>
+            <h1 class="title-cont">Cancel anytime, anywhere </h1>
             <img src="../img/Icon metro-cancel.png"/>
-            <p class="text2">If you don't like our services, you can cancel anytime you want, no contracts,
+            <p class="p-cont">If you don't like our services, you can cancel anytime you want, no contracts,
                 no fees.
             </p>
         </div>
@@ -84,7 +84,6 @@
             </p>
             <!--Imágenes-->
             <div class="devices">
-                <img src="../img/Flecha.png" alt="Flecha" class="row">
                 <img src="../img/Image 2.png" alt="iPhone" class="devices">
                 <img src="../img/Image 1.png" alt="Mac" id="mac">
                 <img src="../img/Image 3.png" alt="PC" class="devices">
