feat: :sparkles: Finishing the page

--- a/DIA5/html/index.html
+++ b/DIA5/html/index.html
@@ -12,10 +12,9 @@
     <div id="fondo">
         <!--BARRA SUPERIOR (LOGIN + SEARCH BUTTON)-->
         <div id="topbar">
-            <!--Sugerencia: Hacer una tabla para el botón de búsqueda y login-->
             <!--Search icon-->
-            <div id="search">
-                <img src="../img/Icon awesome-search.png" alt="searchbutton">
+            <div class="search">
+                <button class="search"><img src="../img/Icon awesome-search.png" alt="searchbutton"></button>>
             </div>
     
             <!--Login button-->
@@ -79,7 +78,7 @@
         <!--Nota: Subdividir-->
         <div class="devices">
             <h1 class="devices">Compatible devices</h1>
-            <p>There's a range of devices where you can enjoy all of the content available
+            <p class="devices">There's a range of devices where you can enjoy all of the content available
                 in Prime Entertaiment:
             </p>
             <!--Imágenes-->
