--- a/DIA7/index.html
+++ b/DIA7/index.html
@@ -3,24 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metrolínea</title>
-    <link rel="stylesheet" href="../DIA7/styles.css">
+    <link rel="stylesheet" href="./style.css/style.css">
+    <title>Comprar Tarjeta Metrolinea</title>
 </head>
 <body>
-    <div id="fondo">
-        <div class="top-bar">
-            <img src="../DIA7/img/1200px-Metrolínea_logo.svg.png" alt="Metrolínea-logo" class="top-bar">
-            
-            <h1 class="top-bar">Comprar Tarjeta</h1>
-            <h1 class="top-bar"><a>Ver Saldo</a></h1>
-
-            <img src="../DIA7/img/Icon ionic-ios-search.svg" alt="search"/ class="top-bar">
-            <img src="../DIA7/img/Icon feather-shopping-cart.svg" alt="shopping-cart" class="top-bar"> 
+    <div class="blanco">
+        <img id="fondo" src="./img/Rectangle 3.svg" alt="">
+        <div class="logo">
+            <img id="loguito" src="./img/Metrolínea_logo.svg.png" alt="">
+            <img id="cuadrito" src="./img/Rectangle 2.svg">
+            <div class="content">
+                <img id="loguito2" src="./img/Metrolínea_logo.svg.png" alt="">
+                <p id="comptarjeta">Comprar Tarjeta</p>
+                <img id="Tarjeta" src="./img/Metrolinea.png" alt="">
+                <img id="linea" src="./img/Line 1.png" alt="">
+                <a href="pagina2.html" class="button">Ver Saldo</a>
+                <div id="search"><img id="lupa" src="./img/Icon ionic-ios-search.svg" alt=""></div>
+                <img id="carrito" src="./img/Icon feather-shopping-cart.svg" alt="">
+                <p class="texto">Tarjeta Metrolínea (Saldo $3000 COP)</p>
+                <p class="texto2">$3000 COP</p>
+                <p class="comprar"> Comprar</p>
+            </div>
+    </div>
+    <div class="negro">
+        <img id="recnegro" src="./img/Rectangle 1.svg" alt="">
+        <img id="flechaup" src="./img/Icon ionic-ios-arrow-up.svg">
+        <img id="flechadown" src="./img/Icon ionic-ios-arrow-down.svg">
+        <img id="numeros" src="./img/Menu.svg">
+        <div class="cant">
+            <p id="cantidad"> Cantidad</p>
         </div>
-
-        <div id="tarjeta-metro">
-            <img src="../DIA7/img/1200px-Metrolínea_logo.svg.png" alt="Tarjeta-metro">
-        </div>
+    </div>
     </div>
 </body>
 </html>
