--- a/DIA7/index.html
+++ b/DIA7/index.html
@@ -3,37 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css/style.css">
-    <title>Comprar Tarjeta Metrolinea</title>
+    <title>Compra tu tarjeta metrolínea</title>
+    <link rel="stylesheet" href="../DIA7/style.css/style.css">
 </head>
-<body>
-    <div class="blanco">
-        <img id="fondo" src="./img/Rectangle 3.svg" alt="">
-        <div class="logo">
-            <img id="loguito" src="./img/Metrolínea_logo.svg.png" alt="">
-            <img id="cuadrito" src="./img/Rectangle 2.svg">
-            <div class="content">
-                <img id="loguito2" src="./img/Metrolínea_logo.svg.png" alt="">
-                <p id="comptarjeta">Comprar Tarjeta</p>
-                <img id="Tarjeta" src="./img/Metrolinea.png" alt="">
-                <img id="linea" src="./img/Line 1.png" alt="">
-                <a href="pagina2.html" class="button">Ver Saldo</a>
-                <div id="search"><img id="lupa" src="./img/Icon ionic-ios-search.svg" alt=""></div>
-                <img id="carrito" src="./img/Icon feather-shopping-cart.svg" alt="">
-                <p class="texto">Tarjeta Metrolínea (Saldo $3000 COP)</p>
-                <p class="texto2">$3000 COP</p>
-                <p class="comprar"> Comprar</p>
+<body id="degradado">
+    <!--Div de fondo-->
+    <div id="fondo">
+        <!---->
+        <div class="barra-superior">
+            <div id="logo">
+                <img src="../DIA7/img/Metrolínea_logo.svg.png" class="barra-superior"/>
             </div>
-    </div>
-    <div class="negro">
-        <img id="recnegro" src="./img/Rectangle 1.svg" alt="">
-        <img id="flechaup" src="./img/Icon ionic-ios-arrow-up.svg">
-        <img id="flechadown" src="./img/Icon ionic-ios-arrow-down.svg">
-        <img id="numeros" src="./img/Menu.svg">
-        <div class="cant">
-            <p id="cantidad"> Cantidad</p>
+            <!--Comprar, Ver, Buscar y Carrito-->
+            <div class="botones">
+                <div id="comprar-tarjeta">
+                    <button class="botones"><h1 class="text">Comprar Tarjeta</h1></button>
+                </div>
+                <div id="ver-saldo">
+                    <button class="botones"><h1 class="text">Ver Saldo</h1></button>
+                </div>
+                <!--SEARCH -->
+                <div class="hiperbotones">
+                    <button class="hiperbotones"><img src="../DIA7/img/Icon ionic-ios-search.svg" alt="search" ></button>
+                    <button class="hiperbotones"><img src="../DIA7/img/Icon feather-shopping-cart.svg" alt="carrito" /></button>
+                </div>
+                    
+
+            </div>
         </div>
-    </div>
+                <!--Barra Lateral-->
+                <div class="barra-lateral">
+                </div>        
     </div>
 </body>
 </html>
