feat: :fire: Update files

--- a/DIA7/index.html
+++ b/DIA7/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compra tu tarjeta metrolínea</title>
+    <title>Comprar Tarjeta</title>
     <link rel="stylesheet" href="../DIA7/style.css/style.css">
 </head>
 <body id="degradado">
@@ -27,13 +27,29 @@
                     <button class="hiperbotones"><img src="../DIA7/img/Icon ionic-ios-search.svg" alt="search" ></button>
                     <button class="hiperbotones"><img src="../DIA7/img/Icon feather-shopping-cart.svg" alt="carrito" /></button>
                 </div>
-                    
-
             </div>
         </div>
                 <!--Barra Lateral-->
                 <div class="barra-lateral">
-                </div>        
+                </div> 
+        <!--Imagen metrolinea-->
+        <div><img src="../DIA7/img/Metrolinea.png" alt="Tarjeta Metro" id="metrocarta"></div>
+        <!--Texto-->
+        <div class="parte-baja">
+            <div class="texto-final">
+            <h1 class="tarjeta-metro">
+                Tarjeta metrolinea (Saldo $3000 COP)
+            </h1>
+            <h2 class="tarjeta-metro"> 
+                $3000 COP
+            </h2>
+        </div>
+        <!--metrolinea cuadro-->
+        <div class="cuadro-metrolinea">
+            <img src="../DIA7/img/1200px-Metrolínea_logo.svg.png" id="logometrocuadro">
+            <h1>Comprar</h1>
+        </div>  
+        </div>  
     </div>
 </body>
 </html>
