--- a/DIA8/index.html
+++ b/DIA8/index.html
@@ -13,16 +13,16 @@
     <div class="barra-principal">
         <h1 id="logo">Logo</h1>
         <div class="hypervinculo">
-            <a href="" class="hypervinculo">Home</a>
-            <a href="" class="hypervinculo">About</a>
-            <a href="" class="hypervinculo">Menu</a>
-            <a href="" class="hypervinculo">Contact</a>
+            <a href="#portada" class="hypervinculo">Home</a>
+            <a href="#historia" class="hypervinculo">About</a>
+            <a href="#productos" class="hypervinculo">Menu</a>
+            <a href="#contact" class="hypervinculo">Contact</a>
         </div>
     </div>
     <!--Portada-->
     <div id="portada">
         <h1 class="titulo1">START YOUR DAY</h1>
-        <img src="../DIA8/img/3.png" id="cafe1" />
+        <img src="../DIA8/img/3.png" id="cafe1" />11
         <h1 class="titulo1">WITH OUR COFFEE</h1>
         <button id="shop-now">
             <p id="shop-now">Shop Now</p>
@@ -30,7 +30,7 @@
     </div>
 
     <!--Story-->
-    <div class="historia">
+    <div id="historia">
         <img src="../DIA8/img/pexels-chitokan-2183027-removebg-preview.png" id="cafe2" />
         <div id="linea"></div>
         <div id="textohistoria">
@@ -59,7 +59,7 @@
         <img src="../DIA8/img/2.png" alt="COFFEE" id="cafe3">
     </div>
 
-    <div class="productos">
+    <div id="productos">
         <img class="productos__descripcion--imagen" src="../DIA8/img/1.png" id="productos__descripcion--imagenuno">
         <img class="productos__descripcion--imagen" src="../DIA8/img/3.png" id="productos__descripcion--imagendos">
         <img class="productos__descripcion--imagen" src="../DIA8/img/4.png" id="productos__descripcion--imagentres">
@@ -96,7 +96,7 @@
         </div>
     </div>
     <hr>
-    <div class="contact">
+    <div id="contact">
         <div class="contact__subdivisor">
             <h1 class="contact__tittle">
                 About <b>Us</b>
